--- a/clock2.html
+++ b/clock2.html
@@ -1,14 +1,16 @@
 <html>
 <head>
   <link rel="stylesheet" href="clock2.css">
-  <script src="clock2.js" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.4.1/snap.svg-min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.js"></script>
 </head>
 
 <body>
 <div class="container">
-  <svg id="clock" viewBox="0 0 600 600"></svg>
+  <svg id="clock" viewBox="0 0 1500 1500"></svg>
 </div>
-</body>
+<script src="clock2.js" type="text/javascript"></script>
 
+</body>
 </html>
